--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -73,5 +73,25 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>5.1.32</version>
 </dependency>
+  	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-webmvc</artifactId>
+  <version>4.1.1.RELEASE</version>
+</dependency>
+<dependency>
+ <groupId>javax.servlet</groupId>
+  <artifactId>servlet-api</artifactId>
+  <version>2.5</version>
+</dependency>
   </dependencies>
 </project>
